# FPA-KDAF

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
config/: kdaf.example.toml
docs/: core-api-contract-v0.2.md
src/kdaf/: __init__.py  cli.py  config.py  core.py  metadata.py  tool_server.py
tests/: test_config.py  test_core_surfaces.py  test_live_docker_smoke.py  test_metadata_repository.py  test_package_metadata.py  test_static_foundation_smoke.py
