[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "kdaf"
version = "0.1.0"
description = "Knowledge-Driven Analytics Framework for finance-focused semantic context and financial data warehousing."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "KDAF Contributors" }
]
keywords = ["analytics", "finance", "knowledge-graph", "neo4j", "postgres", "data-warehouse"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Office/Business :: Financial",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/slunyakin/FPA-KDAF"
Issues = "https://github.com/slunyakin/FPA-KDAF/issues"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: tests that require Docker Compose services",
  "smoke: fast foundation smoke tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
